# pty-replay-web

./: .env.example  Cargo.toml  package-lock.json
.sqlx/: query-1cad40c5048f52dc2b237015fb9fa2c1674bd6bf0b3f4f1037490f9c97d0875a.json  query-21648327ec07b65686396a936f1698f987ca4ec1a5297020e4c9adc4c48b720e.json  query-3703e18a1b8bf2cc0b57d6db81893325f15eb9c4694f6c9c505db1171b39224a.json  query-54a865f10ed15375c4f5801ced4b7d27148fb7b8204aa676f12e768012a930f6.json  query-74ec8e068666585077b94d4cddc33adc9ae90d1efd0d383f50593c5eba7e7003.json  query-759c6f1161e0adb42d307be0a62df04df74d5fe08bf7cc595c156ee44787765f.json  query-8d20a7c76b59526dce8eca2adcd23b5415421bfe0b1c3bf7c2e358e2e50b544d.json  query-ad319dd858e210fd70b0a9595a06506863e5b3489a7a62aeb10d6e6a2736f0f2.json  query-c04f66358ec8bc7fec27f6780079bf681b41d0f93d4a94e975ea40a5bd2a7479.json  query-d248da964deb659606eac4bc141f07a4e7bd53c1e07003ca773bbdcd8ed13536.json
database/: mark.sql  sql.sql
src/: index.rs  list.rs  main.rs  mark.rs  note.rs  s3.rs  upload.rs  view.rs  visible.rs
src/models/: common.rs  log.rs  mod.rs
static/js/: app.js  asciinema-player.esm.min.js
templates/: index.html  list.html  view.html
