[package]
name = "pty-replay-web"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }
askama = { version = "0.14", features = ["serde_json"] }
askama_web = { version = "0.14", features = ["axum-0.8"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", default-features = false, features = [
    "mysql",
    "macros",
    "runtime-tokio",
    "time",
] }
anyhow = "1.0"
dotenvy = "0.15"
time = { version = "0.3", features = [
    "macros",
    "serde",
    "formatting",
    "local-offset",
] }
base64 = "0.22"
aws-config = "1"
aws-sdk-s3 = "1"
bytes = "1"
futures = "0.3"
thiserror = "2.0"
aws-smithy-runtime-api = { version = "1.1", default-features = false }
tower-http = { version = "0.6", features = ["fs"] }
flate2 = "1"
